Added App.vue files

--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "quizGame",
+  "name": "quizgame",
   "version": "1.0.0",
-  "description": "",
+  "description": "Online Multiplayer Quiz Game with Vue.js and Socket.io",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Matthew Lowe",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "node": "^15.0.1",
     "socket.io": "^2.3.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/7daytheory/multiplayerQuiz.git"
+  },
+  "bugs": {
+    "url": "https://github.com/7daytheory/multiplayerQuiz/issues"
+  },
+  "homepage": "https://github.com/7daytheory/multiplayerQuiz#readme"
 }
