--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "quizgame",
   "version": "1.0.0",
-  "description": "Online Multiplayer Quiz Game with Vue.js and Socket.io",
-  "main": "index.js",
+  "description": "Online Multiplayer Quiz Game",
+  "main": "App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "start": "npm run dev",
+    "unit": "jest --config test/unit/jest.conf.js --coverage",
+    "test": "npm run unit",
+    "lint": "eslint --ext .js,.vue src test/unit",
+    "build": "node build/build.js"
   },
   "keywords": [],
   "author": "Matthew Lowe",
@@ -21,5 +26,8 @@
   "bugs": {
     "url": "https://github.com/7daytheory/multiplayerQuiz/issues"
   },
-  "homepage": "https://github.com/7daytheory/multiplayerQuiz#readme"
+  "homepage": "https://github.com/7daytheory/multiplayerQuiz#readme",
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.0"
+  }
 }
